# mc_structure_explorer

./: README.md  pyproject.toml  setup.cfg
mc_structure_explorer/: mc_engine.py  utils.py
mc_structure_explorer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mc_structure_explorer/scripts/: run_mc.py
tests/: config.yaml  custom_analysis.ipynb  open_dataset.sh  prim.cif
tests/chemiscope/: dataset_0.json
tests/results/: mc_config.yaml  results_0.json
