[metadata]
name = mc_structure_explorer
version = 0.1.0
description = Monte Carlo engine for structure exploration
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
license = MIT
python_requires = >=3.10

[options]
packages = find:
install_requires =
    numpy
    pymatgen
    ase
    mace-torch
    mace
    chemiscope
    tqdm


[options.entry_points]
console_scripts =
    run-mc = mc_structure_explorer.scripts.run_mc:main
